# flysim_tutorials

./: README.md  pyproject.toml
body_tutorial/: main.ipynb  pixi.toml  readme.md
body_tutorial/projectlib/: __init__.py
notebooks/: 01_flyvis_tutorial_deep_stimulus_design.ipynb  02_flyvis_tutorial_mechanism_discovery.ipynb  03_flyvis_project_optimal_deep_stimulus_design.ipynb  04_flyvis_project_deep_illusion_design.ipynb  05_flyvis_project_deep_mechanistic_interpretation.ipynb  05_flyvis_project_mechanistic_interpretation.ipynb  06_flyvis_project_deep_mechanistic_auxiliary_targets.ipynb
