[project]
name = "flysim-tutorials"
version = "0.1.0"
description = "Tutorial materials for simulating fly brain and body with deep learning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FlyVis Tutorial Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]
requires-python = ">=3.9"
dependencies = [
    "flyvis[dev,examples]",
]

[project.urls]
Homepage = "https://github.com/TuragaLab/flysim_tutorials"
Repository = "https://github.com/TuragaLab/flysim_tutorials"
Documentation = "https://github.com/TuragaLab/flysim_tutorials"
"Bug Tracker" = "https://github.com/TuragaLab/flysim_tutorials/issues"